refactor!: remove AssetStorageConfig from RoomParameters
