# api/docs/openapi.yml
@@ -120,35 +120,6 @@ paths:
       security: []
 components:
   schemas:
-    AssetStorageConfig:
-      oneOf:
-        - type: object
-          required:
-            - type
-          properties:
-            type:
-              type: string
-              enum:
-                - in_memory
-        - type: object
-          required:
-            - url
-            - secret
-            - type
-          properties:
-            secret:
-              type: string
-            type:
-              type: string
-              enum:
-                - controller
-            url:
-              type: string
-              format: uri
-      example:
-        secret: secret
-        type: controller
-        url: "https://localhost:11411/"
     CallInId:
       $ref: "#/components/schemas/NumericId"
       description: The id of a call-in participation
@@ -466,13 +437,9 @@ components:
         - streaming_links
         - e2e_encryption
         - module_settings
-        - asset_storage
         - preferred_language
         - fallback_language
       properties:
-        asset_storage:
-          $ref: "#/components/schemas/AssetStorageConfig"
-          description: "Configuration for storing room assets (e.g., meeting reports)."
         call_in:
           $ref: "#/components/schemas/CallInInfo"
         created_by:
@@ -512,10 +479,6 @@ components:
             - type: "null"
             - $ref: "#/components/schemas/RateLimitSettings"
       example:
-        asset_storage:
-          secret: secret
-          type: controller
-          url: "https://localhost:11411/"
         call_in:
           id: "1234567890"
           password: "0987654321"
@@ -738,10 +701,6 @@ components:
             title: ""
           role: moderator
         room_parameters:
-          asset_storage:
-            secret: secret
-            type: controller
-            url: "https://localhost:11411/"
           call_in:
             id: "1234567890"
             password: "0987654321"
